js/src/tests/test262/built-ins/NativeErrors/TypeError/prototype.js
assert
.
sameValue
(
TypeError
.
prototype
Object
.
getPrototypeOf
(
new
TypeError
)
)
;
verifyNotEnumerable
(
TypeError
"
prototype
"
)
;
verifyNotWritable
(
TypeError
"
prototype
"
)
;
verifyNotConfigurable
(
TypeError
"
prototype
"
)
;
reportCompare
(
0
0
)
;
